:construction: - Jordy Vargas - Primeros cambios al HTML. Solo agregué el contenedor del header.

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MadLabs</title>
 </head>
 <body>
-    
+    <header class="encab-pag">
+        <div class="contenedor">
+            <nav class="nav-principal">
+                <li><a href="#">Opción 1</a></li>
+                <li><a href="#">Opción 2</a></li>
+                <li><a href="#">Opción 3</a></li>
+            </nav>
+            <div class="logo">
+                <img src="" alt="MadLabsLogo">
+            </div>
+            <nav class="nav-principal">
+                <li><a href="#">Opción 4</a></li>
+                <li><a href="#">Opción 5</a></li>
+                <li><a href="#">Opción 6</a></li>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
