:construction: - Jordy Vargas - Cambio de nombre a las opciones del navegador.

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -9,17 +9,17 @@
     <header class="encab-pag">
         <div class="contenedor">
             <nav class="nav-principal">
-                <li><a href="#">Opción 1</a></li>
-                <li><a href="#">Opción 2</a></li>
-                <li><a href="#">Opción 3</a></li>
+                <li><a href="#">Cultura</a></li>
+                <li><a href="#">Eventos</a></li>
+                <li><a href="#">Comida</a></li>
             </nav>
             <div class="logo">
                 <img src="" alt="MadLabsLogo">
             </div>
             <nav class="nav-principal">
-                <li><a href="#">Opción 4</a></li>
-                <li><a href="#">Opción 5</a></li>
-                <li><a href="#">Opción 6</a></li>
+                <li><a href="#">Viajes</a></li>
+                <li><a href="#">Moda</a></li>
+                <li><a href="#">Salud</a></li>
             </nav>
         </div>
     </header>
