--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>MadLabs</title>
 </head>
 <body>
     <header class="encab-pag">
         <div class="contenedor">
-            <nav class="nav-principal-left">
+            <nav class="nav-principal">
                 <li><a href="#">Cultura</a></li>
                 <li><a href="#">Eventos</a></li>
                 <li><a href="#">Comida</a></li>
             </nav>
             <div class="logo">
-                <img src="/vamopueh/images/MadlabsLogo.png" alt="MadLabsLogo">
+                <img src="" alt="MadLabsLogo">
             </div>
-            <nav class="nav-principal-right">
+            <nav class="nav-principal">
                 <li><a href="#">Viajes</a></li>
                 <li><a href="#">Moda</a></li>
                 <li><a href="#">Salud</a></li>
