--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/vamopueh/images/MadlabsLogo.png">
     <link rel="stylesheet" href="styles.css">
-    <title>MadLabs</title>
+    <title>madlabs</title>
 </head>
 <body>
     <header class="encab-pag">
