:zap: - Isaac Grijalba - Prueba de footer :v

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/vamopueh/images/MadlabsLogo.png">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/0cdb13fdf3.js" crossorigin="anonymous"></script>
     <title>madlabs</title>
 </head>
 <body>
@@ -25,5 +26,28 @@
             </nav>
         </div>
     </header>
+    <footer class="footer">
+        <div class="container-footer">
+            <div class="a">
+                <p>Derechos reservados</p>
+            </div>
+            <div class="b">
+                <a href="#"><p class="Acerca de">Acerca de</p></a>
+                <a href="#"><p class="Ayuda">Ayuda?</p></a>
+                <a href="#"><p class="Guia">Guía de contenido</p></a>
+            </div>
+            <div class="c">
+                <div class="icon">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
