:zap: - Isaac Grijalba - Footer fixed

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -26,6 +26,9 @@
             </nav>
         </div>
     </header>
+    <main>
+       
+    </main>
     <footer class="footer">
         <div class="container-footer">
             <div class="a">
