:bug: - Jordy Vargas - Header listo, sólo queda editar estilos del footer.

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -22,18 +22,18 @@
 
     <!-- navbar made by Jordy -->
     <header class="encab-pag">
-        <div class="contenedor">
+        <div class="contenedor1">
             <nav class="nav-principal-left">
                 <li><a href="#">Cultura</a></li>
                 <li><a href="#">Eventos</a></li>
-                <li><a href="#">Comida</a></li>
+                <li><a href="#">Deportes</a></li>
             </nav>
             <div class="logo">
                 <img src="/vamopueh/images/MadlabsLogo.png" alt="MadLabsLogo">
             </div>
             <nav class="nav-principal-right">
                 <li><a href="#">Viajes</a></li>
-                <li><a href="#">Moda</a></li>
+                <li><a href="#">Becas</a></li>
                 <li><a href="#">Salud</a></li>
             </nav>
         </div>
