:lipstick: - Isaac Grijalba - Finalización de detalles en footer

--- a/vamopueh/index.html
+++ b/vamopueh/index.html
@@ -290,17 +290,26 @@
     <footer class="footer">
         <div class="container-footer">
             <div class="a">
-                <p>Derechos reservados</p>
+                <ul>
+                    <li>Universidad Nacional de Ingeniería</li>
+                    <li>Facultad de Ciencias y Sistemas</li>
+                    <div class="copyright">
+                        <p>2020 ENP Productions Derechos Reservados</p>
+                    </div>
+                </ul>
             </div>
             <div class="b">
                 <a href="#">
-                    <p class="Acerca de">Acerca de</p>
+                    <p class="contenido">Contenido principal</p>
                 </a>
                 <a href="#">
-                    <p class="Ayuda">Ayuda?</p>
+                    <p class="sobre-nosotros">Sobre nosotros</p>
                 </a>
                 <a href="#">
-                    <p class="Guia">Guía de contenido</p>
+                    <p class="eventos">Eventos próximos</p>
+                </a>
+                <a href="#">
+                    <p class="ayuda">Ayuda</p>
                 </a>
             </div>
             <div class="c">
@@ -312,6 +321,12 @@
                 </div>
                 <div class="icon">
                     <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="far fa-heart"></i></a>
                 </div>
             </div>
         </div>
